# GM

./: .gitignore  GM-tracabilite.txt  api-clarins.txt  api_response.json  api_response_9284033015.json  create_index.txt  package-lock.json
GM-tracabilite/: base retraitée.xlsx  comparatif.csv  comparatif.xlsx  fichier_cible.csv  log_python.txt  log_python2.txt  modifie_scans_202505281312_SML_10.csv  package-lock.json  query_advanced.txt  regles_v1_v2.csv  regles_v1_v2.xlsx  resultat_python.csv  resultat_python_nouveau2.csv  scans_202505281312_SML_10.csv  scans_202505281312_SML_100.csv  scans_202505281312_SML_100_enrichi_v1.csv  scans_202505281312_SML_100_enrichi_v2.csv  scans_202505281312_SML_10_enrichi_modele.csv  scans_202505281312_SML_10_enrichi_v1.csv  scans_202505281312_SML_10_enrichi_v2.csv  scans_202505301128_SML_10_enrichi_v1.csv  scans_202505301128_SML_10_enrichi_v2.csv  test-envois-direct-results.csv  test-envois-direct-results.json  test-envois-results.csv  test-envois-results.json  test-produits-specifiques.csv  transform_csv.js  transform_v1_to_v2.js  ~$regles_v1_v2.xlsx
GM-tracabilite-main/GM-tracabilite-main/: .gitignore  README.md  pyproject.toml  streamlit_app.py  tracabilite.py
api-clarins-lot2-main/: .gitignore  Dockerfile  README.md  pyproject.toml
api-clarins-lot2-main/src/: main.py
api-clarins-lot2-main/src/DataModels/: article.py  conditionnement.py  localisation.py  tracabilite.py
api-clarins-lot2-main/src/GMDATA/: article.py  conditionnement.py  db.py  tracabilite.py
clean-locations-main/: setup_mongodb.py
(+39 files in other folders)
